--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,7 @@ script:
  - GOOS=linux GOARCH=amd64 go build -o logstash_exporter
  - tar -zcvf logstash_exporter_amd64.tar.gz logstash_exporter
 
-deploy:
-  provider: s3
-  access_key_id: "$ARTIFACTS_SECRET"
-  secret_access_key: "$$ARTIFACTS_KEY"
-  bucket: "homelessnessbo"
-  skip_cleanup: true
-  region: "eu-west-2"
+artifacts:
+  s3_region: "eu-west-2"
+  paths: "logstash_exporter_amd64.tar.gz"
+  debug: true
