--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ script:
  - GOOS=linux GOARCH=amd64 go build -o logstash_exporter
  - tar -zcvf logstash_exporter_amd64.tar.gz logstash_exporter
 
-artifacts:
-  s3_region: "eu-west-2"
-  paths: "logstash_exporter_amd64.tar.gz"
-  debug: true
+addons:
+  artifacts:
+    s3_region: "eu-west-2"
+    paths: "logstash_exporter_amd64.tar.gz"
+    debug: true
